# clip-wave

./: .gitignore  CLAUDE.md  CODEX.md  Clip Wave_0.2.1_x64_en-US.wxs  FFMPEG_LICENSE.txt  README.md  REPO_SETUP_GUIDE.md  SDD.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.cursor/rules/: git-commit-push-gate.mdc
scripts/: pr-merge-and-build.ps1
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: main.rs
src-tauri/wix/: main.wxs  uninstall-cleanup.ps1  uninstall-ffmpeg.wxs
src/styles/: app.css  reset.css  variables.css
